public/assets/indexstyle.css
      p {
        color: white;
      }
      h1 {
        color: white;
      }
      body {
        text-align: center;
        overflow: hidden;
        font-family: monospace;
      }
      h1 {
        text-align: center;
        margin-bottom: 0;
      }
      h4 {
        text-align: center;
        margin-bottom: 0;
        color: white;
        font-size: 25px;
      }
      p {
        text-align: center;
        font-size: 20px;
        margin-top: 25px;
        margin: auto;
      }
      div {
        text-align: center;
      }
      .inputurl {
        margin-top: 0;
        margin-bottom: 10px;
      }
      body{
        background-image: url('../assets/back.gif');
      }
      .button {
  border-width: 1px;
  border-radius: 5px;
  color: white;
  padding: 4px 8px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  transition-duration: 0.8s;
  cursor: pointer;
  width: 115px;
  height: 35px;
}
.proxybutton {
  width: 115px;
  height: 35px;
  background-color: rgb(24, 24, 24); 
  color: rgb(255, 255, 255); 
}
.proxybutton:hover {
  background-color:rgb(129, 129, 129);
  color: white;
}
.proxybuttonactive {
  background-color:rgb(161, 161, 161);  
  color: white;
}
.gobutton {
  width: 150px;
  height: 50px;
  background-color: rgb(24, 24, 24); 
  color: rgb(255, 255, 255); 
}
.gobutton::after {
  content: "Unblock Now!";
}

.gobutton:hover::after {
  content: "Great!";
}

.gobutton:hover {
  background-color:rgb(190, 190, 190);
  color: white;
}
@keyframes fadeInAnimation {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
     }
}
.gobuttontext {
  animation: fadeInAnimation ease 1s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

      .input {
  background-color: rgb(175, 68, 149);
  border-color: rgb(175, 68, 149);
  border-width: 2px;
  border-radius: 5px;
  color: white;
  padding: 4px 8px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  transition-duration: 0.4s;
  cursor: pointer;
}
.inputurl {
  background-color: rgb(175, 68, 149); 
  color: white; 
}
.inputurl::placeholder{
  color: lightgray;
}
.inputurl:focus {
  background-color: rgb(95, 104, 226)
}
footer {
    position: absolute;
    bottom: 3%;
    width: 60%;
    text-align: center
}
.small {
  white-space: initial;
}

@media only screen and (max-width: 600px) {

  div {
    width: 80%;
    margin: auto;
    text-align: center;
  }
  .navbar {
    display: none;
  }
  p {
    margin: auto;
    width: 500px;
  }
}

